// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c2 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c3 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
.S1 {
  -ms-flex-negative: 1;
  -ms-flex-positive: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-flex: 1;
  -webkit-flex-basis: 0%;
  -webkit-flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-basis: 0%;
  flex-grow: 1;
  flex-shrink: 1;
  margin-bottom: 10px;
  min-width: 100%;
}

.S2 {
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
}

.S3 {
  height: 10px;
  margin-bottom: 10px;
}

.S4 {
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
}

.S5 {
  -ms-flex-negative: 1;
  -ms-flex-positive: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-flex: 1;
  -webkit-flex-basis: 0%;
  -webkit-flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-basis: 0%;
  flex-grow: 1;
  flex-shrink: 1;
  margin-bottom: 0px;
  min-width: 100%;
}

.S6 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.IS1 {
  max-width: 25%;
  max-height: 50%;
}

.IS2 {
  max-width: 25%;
  max-height: 50%;
}

.IS3 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS4 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS5 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS6 {
  padding-bottom: 150%;
}

.IS7 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS8 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS9 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS10 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS11 {
  height: 10;
  margin-bottom: 10px;
}

.IS12 {
  height: 10;
  margin-bottom: 10px;
}

.IS13 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS14 {
  height: 10;
  margin-bottom: 10px;
}

.IS15 {
  height: 10;
  margin-bottom: 10px;
}

.IS16 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS17 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS18 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}
</style>

<animations__FadeIn>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "animations__FadeIn-sc-2iiu4y-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "animation:",
            Keyframes {
              "id": "sc-keyframes-eMLfYp",
              "inject": [Function],
              "name": "eMLfYp",
              "rules": Array [
                "@-webkit-keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
                "@keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
              ],
              "toString": [Function],
            },
            " 0.3s ease-in-out;",
          ],
        },
        "displayName": "animations__FadeIn",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "animations__FadeIn-sc-2iiu4y-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 animations__FadeIn-sc-2iiu4y-0 c0 css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-17s6mgv S6"
      >
        <div
          className="css-view-1dbjc4n r-flex-13awgt0 r-marginBottom-15d164r r-minWidth-3e7lpq S1"
        >
          <TimesImage
            aspectRatio={0.6666666666666666}
            disablePlaceholder={false}
            fadeImageIn={false}
            highResSize={800}
            lowResQuality={null}
            lowResSize={60}
            rounded={false}
            uri="https://img.io/img"
          />
        </div>
        <div
          className="css-view-1dbjc4n r-flex-13awgt0 r-marginBottom-p1pxzi r-minHeight-1lorjx1 r-minWidth-3e7lpq S5"
        >
          <_default>
            <Gradient
              className="IS9"
              degrees={264}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS12"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS15"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS18"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
          </_default>
        </div>
      </div>
    </div>
  </StyledComponent>
</animations__FadeIn>
`;

exports[`2. card with reversed loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c2 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c3 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
.S1 {
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
}

.S2 {
  height: 10px;
  margin-bottom: 10px;
}

.S3 {
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
}

.S4 {
  -ms-flex-negative: 1;
  -ms-flex-positive: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-flex: 1;
  -webkit-flex-basis: 0%;
  -webkit-flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-basis: 0%;
  flex-grow: 1;
  flex-shrink: 1;
  margin-bottom: 10px;
  min-width: 100%;
}

.S5 {
  -ms-flex-negative: 1;
  -ms-flex-positive: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-flex: 1;
  -webkit-flex-basis: 0%;
  -webkit-flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-basis: 0%;
  flex-grow: 1;
  flex-shrink: 1;
  margin-bottom: 0px;
  min-width: 100%;
}

.S6 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.IS1 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS2 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS3 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS4 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS5 {
  height: 10;
  margin-bottom: 10px;
}

.IS6 {
  height: 10;
  margin-bottom: 10px;
}

.IS7 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS8 {
  height: 10;
  margin-bottom: 10px;
}

.IS9 {
  height: 10;
  margin-bottom: 10px;
}

.IS10 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS11 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS12 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS13 {
  max-width: 25%;
  max-height: 50%;
}

.IS14 {
  max-width: 25%;
  max-height: 50%;
}

.IS15 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS16 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS17 {
  align-items: center;
  background-color: #EDEDED;
  bottom: 0;
  justify-content: center;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
  border-radius: 0;
}

.IS18 {
  padding-bottom: 150%;
}
</style>

<animations__FadeIn>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "animations__FadeIn-sc-2iiu4y-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "animation:",
            Keyframes {
              "id": "sc-keyframes-eMLfYp",
              "inject": [Function],
              "name": "eMLfYp",
              "rules": Array [
                "@-webkit-keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
                "@keyframes eMLfYp{from{opacity:0;}to{opacity:1;}}",
              ],
              "toString": [Function],
            },
            " 0.3s ease-in-out;",
          ],
        },
        "displayName": "animations__FadeIn",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "animations__FadeIn-sc-2iiu4y-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0 animations__FadeIn-sc-2iiu4y-0 c0 css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-height-16l9doz r-justifyContent-17s6mgv S6"
      >
        <div
          className="css-view-1dbjc4n r-flex-13awgt0 r-marginBottom-15d164r r-minHeight-1lorjx1 r-minWidth-3e7lpq S4"
        >
          <_default>
            <Gradient
              className="IS3"
              degrees={264}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS6"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS9"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
            <Gradient
              className="IS12"
              degrees={267}
              endPoint="1"
              startPoint="0"
            />
          </_default>
        </div>
        <div
          className="css-view-1dbjc4n r-flex-13awgt0 r-marginBottom-p1pxzi r-minWidth-3e7lpq S5"
        >
          <TimesImage
            aspectRatio={0.6666666666666666}
            disablePlaceholder={false}
            fadeImageIn={false}
            highResSize={800}
            lowResQuality={null}
            lowResSize={60}
            rounded={false}
            uri="https://img.io/img"
          />
        </div>
      </div>
    </div>
  </StyledComponent>
</animations__FadeIn>
`;
